ngram based Logistic Classification code update

--- a/Text_Mining_Implementation/Week1_Ngram_based_tokenizer.ipynb
+++ b/Text_Mining_Implementation/Week1_Ngram_based_tokenizer.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "import os\n",
     "\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -212,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['‘', '효자', '폰', '’', '갤럭시', 'S', '7', '‘', '불효', '폰', '’', 'G', '5', '…', '분위기', '극', '과', '극']\n"
+      "[('‘', 'SY'), ('효자', 'NNG'), ('폰', 'NNG'), ('’', 'SY'), ('갤럭시', 'NNP'), ('S', 'SL'), ('7', 'SN'), ('‘', 'SY'), ('불효', 'NNG'), ('폰', 'NNG'), ('’', 'SY'), ('G', 'SL'), ('5', 'SN'), ('…', 'SE'), ('분위기', 'NNG'), ('극', 'NNG'), ('과', 'JC'), ('극', 'NNG')]\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
     "# tokenization with Mecab\n",
     "from konlpy.tag import Mecab\n",
     "mecab = Mecab()\n",
-    "print(mecab.morphs(train['title'][0]))"
+    "print(mecab.pos(train['title'][0]))"
    ]
   },
   {
@@ -282,7 +282,7 @@
     "        output\n",
     "        ngram_counter -> counting dictionary for n-gram\n",
     "    '''\n",
-    "    \n",
+    "\n",
     "    ngram_counter = defaultdict(int) # count를 위한 dictionary를 만들기 위해 defaultdict 사용\n",
     "    begin, end = n_range\n",
     "    \n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 151,
    "metadata": {
     "scrolled": false
    },
@@ -393,28 +393,28 @@
     {
      "data": {
       "text/plain": [
-       "['나/NP',\n",
-       " '는/JX',\n",
-       " '학교/NNG',\n",
-       " '에/JKB',\n",
-       " '갔/VV+EP',\n",
-       " '습니다/EF',\n",
+       "['학교/NNG',\n",
+       " '에서/JKB',\n",
+       " '수업/NNG',\n",
+       " '을/JKO',\n",
+       " '받/VV',\n",
+       " '는다/EF',\n",
        " './SF',\n",
-       " '나/NP-는/JX',\n",
-       " '는/JX-학교/NNG',\n",
-       " '학교/NNG-에/JKB',\n",
-       " '갔/VV+EP-습니다/EF',\n",
-       " '습니다/EF-./SF']"
+       " '학교/NNG-에서/JKB',\n",
+       " '수업/NNG-을/JKO',\n",
+       " '을/JKO-받/VV',\n",
+       " '받/VV-는다/EF',\n",
+       " '는다/EF-./SF']"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# test case for unigram and bigram\n",
-    "tokenizer.tokenize('나는 학교에 갔습니다.')"
+    "tokenizer.tokenize('학교에서 수업을 받는다.')"
    ]
   },
   {
@@ -655,11 +655,366 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### form DTM using scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 28962)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "vectorizer = CountVectorizer(\n",
+    "    tokenizer = tokenizer,\n",
+    "    lowercase = False,\n",
+    ")\n",
+    "X_train = vectorizer.fit_transform(train['title'])\n",
+    "X_train.shape # (10000, 28962)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression and its coefficient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gibonghong/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "classifier = LogisticRegression()\n",
+    "classifier.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IT_idxs_coef = list(enumerate(classifier.coef_[0]))\n",
+    "IT_idxs = sorted(IT_idxs_coef, key=lambda x:-x[1])[:50]\n",
+    "\n",
+    "eco_idxs_coef = list(enumerate(classifier.coef_[1]))\n",
+    "eco_idxs = sorted(eco_idxs_coef, key=lambda x:-x[1])[:50]\n",
+    "\n",
+    "poli_idxs_coef = list(enumerate(classifier.coef_[2]))\n",
+    "poli_idxs = sorted(poli_idxs_coef, key=lambda x:-x[1])[:50]\n",
+    "\n",
+    "vocab2idx = vectorizer.vocabulary_\n",
+    "idx2vocab = list(sorted(vocab2idx, key=lambda x:vocab2idx[x]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('KT/SL', 1.5979724197041187),\n",
+       " ('SW/SL', 1.450867036606296),\n",
+       " ('데이터/NNG', 1.4330650600668249),\n",
+       " ('네이버/NNP', 1.4241360798791471),\n",
+       " ('애플/NNP', 1.380759796232405),\n",
+       " ('통신/NNG', 1.2919508474257113),\n",
+       " ('게임/NNG', 1.2888698870621846),\n",
+       " ('IT/SL', 1.2224886996069422),\n",
+       " ('안랩/NNP', 1.2092125903753634),\n",
+       " ('앱/NNG', 1.2032265095844688),\n",
+       " ('드론/NNP', 1.1874971262869634),\n",
+       " ('구글/NNG', 1.1597853252911219),\n",
+       " ('우주/NNG', 1.1101076949468858),\n",
+       " ('페이스북/NNP', 1.0750114858705384),\n",
+       " ('포켓몬/NNP', 1.0738674773986174),\n",
+       " ('ICT/SL', 1.0567906154586622),\n",
+       " ('CES/SL', 1.0281080310898072),\n",
+       " ('인공지능/NNP', 1.018734340161225),\n",
+       " ('갤럭시/NNP', 1.0183396858541898),\n",
+       " ('스마트폰/NNP', 1.0155395712234492),\n",
+       " ('정보/NNG', 1.0135350921868391),\n",
+       " ('클라우드/NNP', 1.0134222728522422),\n",
+       " ('VR/SL', 1.0045475364324832),\n",
+       " ('방통/NNG', 0.9978756975443422),\n",
+       " ('미래/NNG', 0.9961895779130883),\n",
+       " ('미래/NNG-부/NNG', 0.9898880607168079),\n",
+       " ('LGU/SL', 0.9726892864960273),\n",
+       " ('삼성전자/NNP', 0.9693233786820062),\n",
+       " ('아이폰/NNP', 0.9690464837257594),\n",
+       " ('시스템/NNG', 0.9685721175661867),\n",
+       " ('방송/NNG', 0.9672724086126822),\n",
+       " ('카카오/NNP', 0.954634992361713),\n",
+       " ('폰/NNG', 0.9506908323985579),\n",
+       " ('보안/NNG', 0.9497721666623241),\n",
+       " ('중소기업/NNG', 0.9356826763748378),\n",
+       " ('업데이트/NNG', 0.9354703168638204),\n",
+       " ('인수/NNG', 0.9162336364890165),\n",
+       " ('신한/NNP-금융/NNG', 0.9153171192451094),\n",
+       " ('넷마블/NNP', 0.9093948208321782),\n",
+       " ('연구/NNG', 0.8963494400246397),\n",
+       " ('PC/SL', 0.868192399732486),\n",
+       " ('IoT/SL', 0.8662799190883921),\n",
+       " ('교수/NNG', 0.8638637443012985),\n",
+       " ('스타트업/NNG', 0.8635323704022709),\n",
+       " ('만/NR-명/NNBC', 0.8596024177485844),\n",
+       " ('LG/SL', 0.8524879778588748),\n",
+       " ('SKT/SL', 0.8478945302984312),\n",
+       " ('아마존/NNP', 0.8373384634392176),\n",
+       " ('신년/NNG-기획/NNG', 0.8364516915086905),\n",
+       " ('솔루션/NNP', 0.8296025460938654)]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IT_idxs = [(idx2vocab[idx], coef) for (idx, coef) in IT_idxs]\n",
+    "IT_idxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('사진/NNG', 1.6198393499161001),\n",
+       " ('회장/NNG', 1.6178383648536612),\n",
+       " ('아파트/NNG', 1.2376654858177827),\n",
+       " ('보험/NNG', 1.2148156307025737),\n",
+       " ('공시/NNG', 1.2125207482560671),\n",
+       " ('fnRASSI/SL', 1.2040752748953176),\n",
+       " ('특징/NNG', 1.2026348511675784),\n",
+       " ('계란/NNG', 1.2025839755846757),\n",
+       " ('임종룡/NNP', 1.1956974560825069),\n",
+       " ('달걀/NNG', 1.161189849554328),\n",
+       " ('코스피/NNP', 1.1539288259077243),\n",
+       " ('인천/NNP', 1.1319864149934808),\n",
+       " ('세트/NNG', 1.1233155323037682),\n",
+       " ('분양/NNG', 1.0715134218130788),\n",
+       " ('총재/NNG', 1.0335128579058572),\n",
+       " ('금융/NNG', 0.9829621649844269),\n",
+       " ('증시/NNG', 0.9762260238314097),\n",
+       " ('부동산/NNG', 0.9600361984769104),\n",
+       " ('사진/NNG-특검/NNG', 0.9514288734321491),\n",
+       " ('닭/NNG', 0.9423427449140709),\n",
+       " ('현대/NNP', 0.9341769679655005),\n",
+       " ('제주항공/NNP', 0.8941722262070202),\n",
+       " ('전용/NNP', 0.88441112537203),\n",
+       " ('증권/NNG', 0.8754701358560648),\n",
+       " ('롯데/NNP', 0.8415558076738103),\n",
+       " ('코엑스/NNP', 0.8391749621410178),\n",
+       " ('선물/NNG', 0.8314057760670115),\n",
+       " ('출시/NNG', 0.8109240249934849),\n",
+       " ('세일/NNG', 0.8012469885609272),\n",
+       " ('수확/NNG', 0.7951569293114892),\n",
+       " ('한전/NNP', 0.7891491974346779),\n",
+       " ('유통/NNG', 0.7877289453936546),\n",
+       " ('외국인/NNG', 0.7853526220130479),\n",
+       " ('현재/NNG', 0.7645662420337579),\n",
+       " ('공단/NNG', 0.7587961824638034),\n",
+       " ('현대/NNG', 0.7560548655834766),\n",
+       " ('생명/NNG', 0.7454715087107315),\n",
+       " ('비상/NNG', 0.744566799503411),\n",
+       " ('오픈/NNG', 0.7441852616679557),\n",
+       " ('매수/NNG', 0.7429668438105522),\n",
+       " ('마감/NNG', 0.7425937746024691),\n",
+       " ('계약/NNG', 0.7422863800104977),\n",
+       " ('조선/NNP', 0.7421656872422709),\n",
+       " ('사장/NNG', 0.7405614853330413),\n",
+       " ('기업/NNG', 0.738146524602698),\n",
+       " ('물가/NNG', 0.7365429865783459),\n",
+       " ('은행장/NNG', 0.7358475704945855),\n",
+       " ('대출/NNG', 0.732828277827828),\n",
+       " ('상승세/NNG', 0.7289392446808438),\n",
+       " ('공사/NNG', 0.7262543993445306)]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eco_idxs = [(idx2vocab[idx], coef) for (idx, coef) in eco_idxs]\n",
+    "eco_idxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('문재인/NNP', 2.0983167282649786),\n",
+       " ('北/NNG', 1.7552245666788167),\n",
+       " ('정유라/NNP', 1.7028640109550852),\n",
+       " ('김정은/NNP', 1.6008885508377082),\n",
+       " ('추미애/NNP', 1.5832161406170369),\n",
+       " ('북한/NNP', 1.5378822567953647),\n",
+       " ('이재명/NNP', 1.4494558931175145),\n",
+       " ('국회/NNG', 1.4352196290866066),\n",
+       " ('대통령/NNG', 1.4329484455841466),\n",
+       " ('촛불/NNG', 1.416429495007603),\n",
+       " ('의원/NNG', 1.4124680927001934),\n",
+       " ('반기문/NNP', 1.3621073057334703),\n",
+       " ('청와대/NNP', 1.359797019944226),\n",
+       " ('민주당/NNP', 1.3050405459881287),\n",
+       " ('박지원/NNP', 1.2808542501697382),\n",
+       " ('특검/NNG', 1.2664327402389928),\n",
+       " ('대선/NNG', 1.2404242488997166),\n",
+       " ('박원순/NNP', 1.1196879908971318),\n",
+       " ('文/NNG', 1.1129003180295758),\n",
+       " ('단독/NNG', 1.1070811082874243),\n",
+       " ('개헌/NNG', 1.1052421237438566),\n",
+       " ('김무성/NNP', 1.0586769556208582),\n",
+       " ('원내대표/NNP', 1.0578238685674874),\n",
+       " ('인명진/NNP', 1.0156979299591524),\n",
+       " ('인사/NNG-하/XSV', 1.0059147680516107),\n",
+       " ('서청원/NNP', 0.9810066662091056),\n",
+       " ('유승민/NNP', 0.9803239588631933),\n",
+       " ('보수/NNG', 0.9724985244033625),\n",
+       " ('軍/NNG', 0.9674655454801091),\n",
+       " ('탈당/NNG', 0.9614998296245839),\n",
+       " ('정의당/NNG', 0.9585666716943186),\n",
+       " ('최순/NNP', 0.9548774389096201),\n",
+       " ('박근혜/NNP', 0.9488341717283825),\n",
+       " ('헌재/NNP', 0.9441275515889129),\n",
+       " ('정부/NNG-시무식/NNG', 0.9337755551082048),\n",
+       " ('안철수/NNP', 0.925072637210975),\n",
+       " ('당/XSN', 0.9210513113607027),\n",
+       " ('해군/NNG', 0.9188362746347067),\n",
+       " ('주승용/NNP', 0.915863650840891),\n",
+       " ('탄핵/NNG', 0.9147667254863747),\n",
+       " ('블랙리스트/NNG', 0.9062233643568118),\n",
+       " ('사격/NNG', 0.895374971314851),\n",
+       " ('정우택/NNP', 0.8936915453350323),\n",
+       " ('실전/NNG', 0.8809715704901695),\n",
+       " ('여론/NNG', 0.8786198277665229),\n",
+       " ('대행/NNG', 0.8584443223669354),\n",
+       " ('潘/NNG', 0.8418046772977034),\n",
+       " ('찬성/NNG', 0.8344753484418441),\n",
+       " ('선거/NNG', 0.8282020161801344),\n",
+       " ('개혁/NNG', 0.8262154446684999)]"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poli_idxs = [(idx2vocab[idx], coef) for (idx, coef) in poli_idxs]\n",
+    "poli_idxs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = vectorizer.transform(test['title'])\n",
+    "y_pred = classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8578050369874635"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_true = test['category']\n",
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(y_true, y_pred, average = 'weighted')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot confusion matrix and see which category is well-classified\n",
+    "# what do we need to do more to enhance its performance?"
+   ]
   }
  ],
  "metadata": {
